--- a/7.0+CSS+Cascade/style.css
+++ b/7.0+CSS+Cascade/style.css
@@ -10,3 +10,16 @@ p {
   margin: 0;
   padding: 0;
 }
+
+.inner-box {
+  background-color: red;
+  padding: 10px;
+}
+
+.white-text {
+  color: white;
+}
+
+#outer-box {
+  background-color: purple;
+}
